--- a/projects/editor/styles/editor.css
+++ b/projects/editor/styles/editor.css
@@ -26,7 +26,7 @@ tui-editor::after {
     pointer-events: none;
     will-change: transform;
     transform: translateY(-0.25rem);
-    inline-size: 95%;
+    inline-size: calc(100% - 2rem);
     font-size: 0.9375rem;
     margin-block-end: 1rem;
     margin: 1rem 1rem -0.375rem;
